test/modules/standard/FileSystem/lydia/copyTree/no_src.good
no_src.chpl:3: error: No such file or directory in copyTree(shesNotThere, pleaseDontBotherTryingToFindHer)
